--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8081
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/bike_sharing
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=apolodor
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
