--- a/src/main/resources/application.properties.example
+++ b/src/main/resources/application.properties.example
@@ -1,9 +1,11 @@
 server.port=8081
 #configuration
+
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/bike_sharing
-spring.datasource.username=your-username
-spring.datasource.password=your-password
+spring.datasource.username=<username>
+spring.datasource.password=<password>
+spring.data.mongodb.uri=mongodb+srv://admin:<password>@cluster0.ozohemj.mongodb.net/sample?retryWrites=true&w=majority
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
