--- a/src/main/resources/application.properties.example
+++ b/src/main/resources/application.properties.example
@@ -1,12 +1,5 @@
 server.port=8081
 #configuration
-
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/bike_sharing
-spring.datasource.username=<username>
-spring.datasource.password=<password>
-spring.data.mongodb.uri=mongodb+srv://admin:<password>@cluster0.ozohemj.mongodb.net/sample?retryWrites=true&w=majority
-
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.data.mongodb.uri=mongodb+srv://admin:<password>@cluster0.ozohemj.mongodb.net/<database_name>?retryWrites=true&w=majority
 
 jwt.secret=securesecurekeygeneratedbymehehe
