--- a/src/main/resources/application.properties.example
+++ b/src/main/resources/application.properties.example
@@ -8,4 +8,16 @@ spring.data.mongodb.auto-index-creation=true
 # spring.data.mongodb.port=27017
 # spring.data.mongodb.database=bike_sharing
 
+# Mail server
+spring.mail.host=localhost
+spring.mail.port=1025
+spring.mail.username=hello
+spring.mail.password=hello
+spring.mail.properties.mail.smtp.ssl.trust=*
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=3000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
 jwt.secret=securesecurekeygeneratedbymehehe
